fixed bug in overflow

--- a/css/style.css
+++ b/css/style.css
@@ -1023,7 +1023,7 @@ select {
     margin-top: 10px;
   }
 }
-* {
+html {
   overflow: hidden;
 }
 
